# concatenative-haskell

./: CHANGELOG.md  README.md  concat-everywhere.cabal
src/Control/: Concatenative.hs
